[gd_scene load_steps=8 format=3 uid="uid://clcm25ohg3ely"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wq5wh"]
[ext_resource type="Texture2D" uid="uid://d3pfw6eompcf5" path="res://kinematic_character_2d_starter/char.png" id="2_kep51"]
[ext_resource type="Texture2D" uid="uid://c6468fbm2mgtm" path="res://ui/touch_button_fire.png" id="3_ap4db"]
[ext_resource type="Texture2D" uid="uid://c6glet148eqfm" path="res://ui/touch_button_jump.png" id="4_4etdy"]
[ext_resource type="Texture2D" uid="uid://cespwpqsmjcow" path="res://ui/touch_button_right.png" id="5_aom2y"]
[ext_resource type="Texture2D" uid="uid://bqw4vn1174mhp" path="res://ui/touch_button_left.png" id="6_da5fa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_058dx"]
radius = 8.0
height = 26.0

[node name="player" type="CharacterBody2D"]
z_index = 5
texture_filter = 1
script = ExtResource("1_wq5wh")
max_speed = 200
gravity = 600.0
jump_force = 200

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kep51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_058dx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(75, 53)
scale = Vector2(0.6875, 0.6875)
texture_normal = ExtResource("3_ap4db")
action = "bubble"
visibility_mode = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(126, 52)
scale = Vector2(0.6875, 0.6875)
texture_normal = ExtResource("4_4etdy")
action = "jump"
visibility_mode = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(-118, 54)
scale = Vector2(0.6875, 0.6875)
texture_normal = ExtResource("5_aom2y")
passby_press = true
action = "right"
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(-171, 55)
scale = Vector2(0.6875, 0.6875)
texture_normal = ExtResource("6_da5fa")
passby_press = true
action = "left"
visibility_mode = 1

[node name="ObjectDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="PlatformDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="PlatformDetector2" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
